objects/MPW_SRAM_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_Total_Block_Size__c</fullName>
        <label>Array Total Block Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MPW_External_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MPW_Process_Information_Question__c</fullName>
        <label>MPW Process Information Question</label>
        <referenceTo>MPW_Reservation__c</referenceTo>
        <relationshipLabel>MPW SRAM Questions</relationshipLabel>
        <relationshipName>MPW_SRAM_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MPW_SRAM_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPW SRAM Configuration</label>
        <referenceTo>MPW_SRAM_Configuration__c</referenceTo>
        <relationshipLabel>MPW SRAM Questions</relationshipLabel>
        <relationshipName>MPW_SRAM_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MPW SRAM Question</label>
    <listViews>
        <fullName>All_columns</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Answer__c</columns>
        <columns>Array_Total_Block_Size__c</columns>
        <columns>MPW_External_ID__c</columns>
        <columns>MPW_Process_Information_Question__c</columns>
        <columns>MPW_SRAM_Configuration__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All columns</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MPW SRAM Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPW SRAM Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>